2010-06-29 version 0.9.3

* GUI knobs now use cairo when available.
* Fixed patch handling to more gracefully deal with locales: accept
    both native and "C" locales, but emit only "C" (thanks to Martin
    Tarenskeen for the bug report.)

2009-01-01 version 0.9.2

* Added '-test' option to allow testing the GUI without a host.
* Silently ignore 'sample-rate' method.
* Fixed GtkSpinButton adjustments to avoid page_size warning with
    GTK+ >=2.14. 
* gcc 4.3 character signedness fixes.
* Changes to build files to support Mac OS X and newer gcc/glibc on
    linux.
* RPM bindir fix in src/Makefile.am.
* Fixed memory leak in src/gui_main.c osc_build_path().
* gcc 2.9x '-finline-limit=5000' fix in configure.in.
* gcc 2.9x '##' preprocessing fix in src/xsynth_voice_blosc.h.

2004-12-25 version 0.9.0

* abandoned version 0.1.x compatibility.
* the patch bank is now sent between GUI and plugin as configure
    information, rather than via a (sometimes temporary) file, which
    retains the intuitive operation of the UI while avoiding the
    synchronization, concurrency, and security issues of the old
    method.  The plugin and GUI will both warn if a host sends
    obsolete 'load' keys.
* changed port order so host-provided UIs will be better organized.
* MIDI CC 7 'volume' is no longer mapped to volume port, as this led
    to nasty interactions between patch changes and volume changes.
    CC7 is now handled internally by the plugin.
* MIDI CCs 5 'portamento time' and 8 'balance' are now mapped to
    their respective ports.
* lowered output level, so it's not so blazingly hot.
* implemented polyphonic glide.
* updated patch set, saved version 0.1.x set in
    extra/version_0.1_patches.Xsynth

2004-12-25 version 0.1.3

* added anti-aliased, minBLEP-based oscillators.
* added Fons Adriaensen's MVCLPF-3 filter.
* added velocity sensitive envelopes.
* oscillators can now be pitched downward up to 2 octaves.
* tuning and pitch bend range controls added.