@@ -343,33 +343,33 @@ static char bitmap_about_bits[] = {
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x0f,0x00,
- 0x00,0x00,0x00,0x00,0x01,0x00,0xc0,0x03,0xf0,0x30,0x18,0x1e,
+ 0x00,0x00,0x00,0x00,0x01,0x00,0xc0,0x03,0xf0,0x30,0x10,0x0c,
  0x80,0x07,0x00,0x00,0x00,0x3e,0x00,0x06,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x80,0x10,0x00,0x00,0x00,0x20,0x00,0x01,0x01,0x20,0x04,0x08,
- 0x49,0x24,0x21,0x40,0x08,0x00,0x00,0x00,0x44,0x00,0x84,0x00,
+ 0x49,0x18,0x12,0x40,0x08,0x00,0x00,0x00,0x44,0x00,0x84,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x80,0x00,0x00,0x00,0x00,0x00,0x00,0x01,0x01,
- 0xa0,0x05,0x08,0x85,0x42,0x21,0x40,0x00,0x00,0x00,0x00,0x44,
+ 0xa0,0x05,0x08,0x85,0x14,0x21,0x40,0x00,0x00,0x00,0x00,0x44,
  0x00,0x84,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x80,0x80,0xa7,0x13,0xea,0x30,
- 0x5c,0x9d,0x07,0xa0,0x04,0x00,0x85,0x42,0x31,0x40,0xc0,0xe3,
+ 0x5c,0x9d,0x07,0xa0,0x04,0x00,0x85,0x10,0x21,0x40,0xc0,0xe3,
  0xe9,0x00,0x44,0x1e,0xc4,0xc3,0xd3,0x01,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x80,0x40,0x68,
- 0x14,0x12,0x21,0x22,0x23,0x01,0xa0,0x04,0x80,0x84,0x42,0x2e,
+ 0x14,0x12,0x21,0x22,0x23,0x01,0xa0,0x04,0x80,0x84,0x10,0x21,
  0x80,0x27,0x04,0x1a,0x01,0x3c,0x21,0x84,0x20,0x34,0x02,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x80,0x40,0x28,0x14,0x12,0x20,0x22,0x21,0x01,0xa0,0x04,0x60,
- 0x84,0x42,0x20,0x00,0xe8,0xe7,0x0b,0x01,0x44,0x21,0x84,0x20,
+ 0x84,0x10,0x21,0x00,0xe8,0xe7,0x0b,0x01,0x44,0x21,0x84,0x20,
  0x14,0x02,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x80,0x40,0x68,0x14,0x13,0x20,0x1c,0x21,0x01,
- 0xa0,0x05,0x10,0x84,0x42,0x20,0x00,0x28,0x10,0x0a,0x01,0x44,
+ 0xa0,0x05,0x10,0x84,0x10,0x21,0x00,0x28,0x10,0x0a,0x01,0x44,
  0x21,0x84,0x20,0x14,0x02,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x80,0x50,0xa8,0xe3,0x12,0x20,
- 0x02,0x21,0x11,0x20,0x04,0x08,0x48,0x24,0x10,0x40,0x28,0x14,
+ 0x02,0x21,0x11,0x20,0x04,0x08,0x48,0x10,0x12,0x40,0x28,0x14,
  0x0b,0x01,0x44,0x21,0x84,0x28,0x14,0x02,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x8f,0x27,
- 0x00,0x12,0xf8,0x3c,0x21,0x0e,0xc0,0x03,0xf8,0x31,0x18,0x0e,
+ 0x00,0x12,0xf8,0x3c,0x21,0x0e,0xc0,0x03,0xf8,0x31,0x7c,0x0c,
  0x80,0xc7,0xe3,0x0a,0x01,0x3e,0x1e,0x1f,0xc7,0x13,0x02,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x20,0x10,0x02,0x00,0x42,0x00,0x00,0x00,0x00,0x00,
