@@ -46,7 +46,7 @@
  */
 
 float_value_delta
-step_dd_table[MINBLEP_PHASES * STEP_DD_PULSE_LENGTH + 1] =
+xsynth_step_dd_table[MINBLEP_PHASES * STEP_DD_PULSE_LENGTH + 1] =
 {
  { 0.000000e+00, 0.000000e+00},{ 0.000000e+00, 0.000000e+00},{ 0.000000e+00, 0.000000e+00},{ 0.000000e+00, 0.000000e+00},
  { 0.000000e+00, 0.000000e+00},{ 0.000000e+00, 0.000000e+00},{ 0.000000e+00, 0.000000e+00},{ 0.000000e+00, 0.000000e+00},
@@ -1204,7 +1204,7 @@ step_dd_table[MINBLEP_PHASES * STEP_DD_PULSE_LENGTH + 1] =
 };
 
 float
-slope_dd_table [MINBLEP_PHASES * SLOPE_DD_PULSE_LENGTH + 1] =
+xsynth_slope_dd_table [MINBLEP_PHASES * SLOPE_DD_PULSE_LENGTH + 1] =
 {
   0.000000e+00, 0.000000e+00, 0.000000e+00, 0.000000e+00, 0.000000e+00, 0.000000e+00, 0.000000e+00, 0.000000e+00,
   0.000000e+00, 0.000000e+00, 0.000000e+00, 0.000000e+00, 0.000000e+00, 0.000000e+00, 0.000000e+00, 0.000000e+00,
